--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "Todoie Express4 Angular",
-  "version": "0.0.1",
+  "version": "0.0.1-1",
   "private": true,
   "dependencies": {
     "express": "~4.0.0",
@@ -10,12 +9,15 @@
     "method-override": "~1.0.0",
     "mongoose": "^3.8.8",
     "twig": "^0.7.1",
-    "connect-flash": "~0.1.1"
+    "connect-flash": "~0.1.1",
+    "express-session": "^1.0.4"
   },
   "scripts": {
     "start": "node server.js"
   },
   "engines": {
     "node": "0.10.x"
-  }
+  },
+  "name": "Todoie-Angular",
+  "subdomain": "todoie-angular"
 }
